--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -7,7 +7,14 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Debug"
+    },
+    "SimpleLogger": {
+      "MinimumLogLevel": "Debug",
+      "IncludeTimestamp": true,
+      "IncludeLogLevel": true,
+      "IsFileLoggingEnabled": true,
+      "LogFilePath": "logs/api.log"
     }
   },
   "AllowedHosts": "*"
