--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build Docker Image for API
         run: |
-          docker build -t api-image ./Api  # Build the Docker image for your API
+          docker build -t api-image -f Api/Docker/Dockerfile Api
 
       - name: Run Docker Container
         run: |
