--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -8,4 +8,7 @@
     <PackageReference Include="Microsoft.Web.Administration" Version="11.1.0" />
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Client\ApiClient.csproj" />
+  </ItemGroup>
 </Project>
