--- a/.github/workflows/Build4Linux.yml
+++ b/.github/workflows/Build4Linux.yml
@@ -1,21 +1,17 @@
+name: Build(Linux) on Push
+
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # Docker works on Ubuntu nicely
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.PAT }}
 
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v4
