--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Markdig" Version="0.41.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DataBase\DataBase.csproj" />
   </ItemGroup>
 
