--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -14,7 +14,7 @@
       "IncludeTimestamp": true,
       "IncludeLogLevel": true,
       "IsFileLoggingEnabled": true,
-      "LogFilePath": "logs/api.log"
+      "LogFilePath": "c:/Trace/api.log"
     }
   },
   "AllowedHosts": "*"
