--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -4,11 +4,18 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft": "Warning",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
+    },
+  "SimpleLogger": {
+    "MinimumLogLevel": "Debug",
+    "IncludeTimestamp": true,
+    "IncludeLogLevel": true,
+    "IsFileLoggingEnabled": true,
+    "LogFilePath": "c:/Trace/api.log"
+  }
+},
   "AllowedHosts": "*"
 }
